[package]
name = "idhash"
version = "0.1.1"
edition = "2018"
license = "MIT"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>"
]
repository = "https://github.com/lissahyacinth/idhash"
description = "Calculate a Row-Invariant ID for Tabular Data"
exclude = [
    "data/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idhash"
path = "src/lib.rs"

[[bin]]
name = "idhash-rs"
path = "src/main.rs"


[dependencies]
arrow = { version = "5.3", default-features = false, features = ["csv"] }
clap = "2.33.3"
num = "0.4.0"
num-traits = "0.2.14"
fasthash = "0.4.0"
rayon = "1.5.1"
