[package]
name = "idhash"
version = "0.3.0"
edition = "2018"
license = "MIT"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>"
]
repository = "https://github.com/lissahyacinth/idhash"
description = "Calculate a Row-Invariant ID for Tabular Data"
exclude = [
    "data/*",
]


[lib]
name = "idhash"
path = "src/lib.rs"

[[bin]]
name = "idhash-rs"
path = "src/main.rs"


[dependencies]
arrow = { package = "arrow2", version = "0.12.0", default-features = false, features = ["csv", "io_csv_read"] }
clap = "2.33.3"
num = "0.4.0"
num-traits = "0.2.15"
fasthash = "0.4.0"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmark_float_conversion"
harness = false